adding popup to the surgeries without doctors

--- a/src/app/composants/header/header.component.html
+++ b/src/app/composants/header/header.component.html
@@ -1,7 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light"
      style="background-color: white!important; height: 6rem!important; width: 100%;
-"
-     [ngClass]="{'navbar-scroll': navbarScrolled}">
+">
   <div class="image">
     <img src="../assets/image/1-removebg-preview.png" >
   </div>
@@ -16,13 +15,12 @@
       </li>
 
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" style="color: #001B35;" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link "  href="/chirurgie" style="color: #001B35;" >
           Services
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="/chirurgie">Chirurgies</a>
-        </div>
+
       </li>
+
 
       <li class="nav-item active">
         <a class="nav-link" href="/apropos">A Propos</a>
@@ -36,7 +34,11 @@
       </li>
 
       <li class="nav-item dropdown">
-        <a class="nav-link " style="color: #001B35;"   role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
+        <a class="nav-link
+
+
+
+ " style="color: #001B35;"   role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
           Espace Médecin
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
