--- a/src/app/composants/header/header.component.scss
+++ b/src/app/composants/header/header.component.scss
@@ -100,5 +100,10 @@ nav:active{
     transition: 1s;
     background-color: #EAF9F8;
 
+  }  ul li:hover{
+    color: #0066FF !important;
+    transition: 1s;
+    background-color: #EAF9F8;
+
   }
 }
