--- a/src/app/detail-profile/detail-profileM/parametres-m/parametres-m.component.html
+++ b/src/app/detail-profile/detail-profileM/parametres-m/parametres-m.component.html
@@ -11,7 +11,7 @@
             <img src="{{medecin.image}}" alt="avatar"
                  class="rounded-circle img-fluid" style="width: 150px;">
             <div class=" justify-content-center mb-2 mt-4">
-              <input type="file" accept="image/*" (change)="onSelectFile($event)"  mt-4
+              <input type="file" accept="image/*" (change)="onSelectFile($event)"
               formControlName="image">
               <button type="submit" class="btn btn-primary mt-4" >changer photo</button>
             </div>
