--- a/src/app/acceuil-content/acceuil-content.component.scss
+++ b/src/app/acceuil-content/acceuil-content.component.scss
@@ -73,17 +73,19 @@
 }
 
 .content-card{
-  width: 100%;
+  width: 80%;
   height: auto;
+  margin: auto;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   border:none;
+  border-radius: 8px;
   background-color: #FBFBFB;
 }
 .card-info{
-  width: 20rem;
-  height: 19rem;
+  width: 22rem;
+  height: 20rem;
   margin: 1rem;
   border: none;
   border-radius:50px;
@@ -121,7 +123,7 @@
 
 .image{
   margin-left: -1rem;
-  width: 20rem;
+  width: 22rem;
   height: 10rem;
   margin-top: -1rem;
 }
